--- a/javafx-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/javafx-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -17,9 +17,15 @@
 #elseif ($javafxVersionStr.startsWith("20") || $javafxVersionStr.startsWith("21") || $javafxVersionStr.startsWith("22"))
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-#else
+#elseif (($javafxVersionStr.startsWith("23"))
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+#elseif (($javafxVersionStr.startsWith("24"))
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
+#elseif (($javafxVersionStr.startsWith("25"))
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
 #end
 #end
     </properties>
@@ -47,8 +53,12 @@
                     <release>11</release>
 #elseif ($javafxVersionStr.startsWith("20") || $javafxVersionStr.startsWith("21") || $javafxVersionStr.startsWith("22"))
                     <release>17</release>
-#else
+#elseif (($javafxVersionStr.startsWith("23"))
                     <release>21</release>
+#elseif (($javafxVersionStr.startsWith("24"))
+                    <release>22</release>
+#elseif (($javafxVersionStr.startsWith("25"))
+                    <release>23</release>
 #end
                 </configuration>
             </plugin>
