--- a/javafx-archetype-fxml/src/main/resources/archetype-resources/pom.xml
+++ b/javafx-archetype-fxml/src/main/resources/archetype-resources/pom.xml
@@ -17,13 +17,13 @@
 #elseif ($javafxVersionStr.startsWith("20") || $javafxVersionStr.startsWith("21") || $javafxVersionStr.startsWith("22"))
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-#elseif (($javafxVersionStr.startsWith("23"))
+#elseif ($javafxVersionStr.startsWith("23"))
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-#elseif (($javafxVersionStr.startsWith("24"))
+#elseif ($javafxVersionStr.startsWith("24"))
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
-#elseif (($javafxVersionStr.startsWith("25"))
+#elseif ($javafxVersionStr.startsWith("25"))
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
 #end
@@ -48,7 +48,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.15.0</version>
                 <configuration>
 #if ("8" == ${javafx-version} || "1.8" == ${javafx-version})
                     <excludes>
@@ -58,11 +58,11 @@
                     <release>11</release>
 #elseif ($javafxVersionStr.startsWith("20") || $javafxVersionStr.startsWith("21") || $javafxVersionStr.startsWith("22"))
                     <release>17</release>
-#elseif (($javafxVersionStr.startsWith("23"))
+#elseif ($javafxVersionStr.startsWith("23"))
                     <release>21</release>
-#elseif (($javafxVersionStr.startsWith("24"))
+#elseif ($javafxVersionStr.startsWith("24"))
                     <release>22</release>
-#elseif (($javafxVersionStr.startsWith("25"))
+#elseif ($javafxVersionStr.startsWith("25"))
                     <release>23</release>
 #end
                 </configuration>
